# NovelScript

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  metadata.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  editor.py  novel.py  scripts.py  v1.py
backend/app/core/: auth_middleware.py  celery_app.py  config.py  db.py  redis.py  security.py
backend/app/db/: connection.py  init.sql
backend/app/models/: http.py  patch.py  sql.py
backend/app/services/: base.py  graphrag_service.py  pipeline_dto.py  pipeline_executor.py  progress.py  rate_limiter.py  simple_queue.py  sse.py  task_lock.py  token_blacklist.py  user_cache.py
backend/app/tasks/: __init__.py  pipeline.py
backend/cli/: README.md  __init__.py  chunker.py  converter.py  element_fixer.py  exporter.py  fountain_exporter.py  graphrag_builder.py  heading_normalizer.py  llm_router.py  models.py  optimizer.py  paragraph_splitter.py  pipeline.py  rag_builder.py  scene_merger.py  summarizer.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_auth.py  test_dashboard.py  test_editor.py  test_novel.py  test_scripts.py  test_sse.py  test_tasks.py
backend/tests/test_cli/: __init__.py  test_chunker.py  test_converter.py  test_element_fixer.py  test_fountain_exporter.py  test_graphrag_builder.py  test_heading_normalizer.py  test_llm_router.py  test_models.py  test_optimizer.py  test_pipeline.py  test_pipeline_core.py  test_rag_builder.py  (+1 more)
(+92 files in other folders)
