[project]
name = "novelscript-backend"
version = "0.1.0"
description = "python backend for NovelScript project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langgraph>=1.2.4",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
    # NovelScript 核心依赖
    "asyncpg>=0.30.0",
    "pgvector>=0.4.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.2.0",
    "faiss-cpu>=1.14.2",
    "langchain-openai>=1.2.2",
    "langchain-community>=0.4.2",
    "openai>=2.41.0",
    "pyyaml>=6.0.3",
]
